[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mint-attest"
version = "0.1.0"
description = "Universal work attestation for AI agents. Prove your agent did the work."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "FoundryNet"}]
keywords = ["ai", "agents", "attestation", "trust", "solana", "verification", "mint", "langchain", "crewai", "autogen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1"]
crewai = ["crewai>=0.1"]
autogen = ["pyautogen>=0.2"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/FoundryNet/mint-attest"
Documentation = "https://mint.foundrynet.io"
Source = "https://github.com/FoundryNet/mint-attest"

[tool.setuptools.packages.find]
include = ["mint_attest*"]

[tool.setuptools.package-data]
mint_attest = ["py.typed"]
